--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Processing Sketch</title>
+		<title>Inspirati.onl</title>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.min.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>
-				HEADER
-			</h1>
 		</header>
 			<section id="content">
-				<canvas data-processing-sources="WoodstockWave.pde">
+				<canvas data-processing-sources="Inspirationl.pde">
 				</canvas>
 		    </section>
-	    <footer>
-		    FOOTER
-	    </footer>
 	</body>
 </html>
