--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<title>Inspirati.onl</title>
@@ -9,7 +9,7 @@
 		<header>
 		</header>
 			<section id="content">
-				<canvas data-processing-sources="Inspirationl.pde">
+				<canvas data-processing-sources="Inspirationl.pde" autofocus>
 				</canvas>
 		    </section>
 	</body>
