--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 				<canvas data-processing-sources="Inspirationl.pde" autofocus>
 				</canvas>
 		    </section>
+		<center>
+			<p>email your quote suggestions to <a href="mailto:be@inspirati.onl">be@inspirati.onl</a></p>
 	</body>
 </html>
