--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 				<canvas data-processing-sources="Inspirationl.pde" autofocus>
 				</canvas>
 		    </section>
+		<br><br>
 		<center>
-			<p>email your quote suggestions to <a href="mailto:be@inspirati.onl">be@inspirati.onl</a></p>
+			<p><i>email your quote suggestions to <a href="mailto:be@inspirati.onl">be@inspirati.onl</a></i></p>
+		</center>
 	</body>
 </html>
