--- a/index.html
+++ b/index.html
@@ -16,5 +16,23 @@
 				<canvas data-processing-sources="Inspirationl.pde" autofocus>
 				</canvas>
 		    </section>
+		
+		<!-- Start of StatCounter Code for Default Guide -->
+			<script type="text/javascript">
+			var sc_project=11409447; 
+			var sc_invisible=1; 
+			var sc_security="8a88fc35"; 
+			var scJsHost = (("https:" == document.location.protocol) ?
+			"https://secure." : "http://www.");
+			document.write("<sc"+"ript type='text/javascript' src='" +
+			scJsHost+
+			"statcounter.com/counter/counter.js'></"+"script>");
+			</script>
+			<noscript><div class="statcounter"><a title="site stats"
+			href="http://statcounter.com/" target="_blank"><img
+			class="statcounter"
+			src="//c.statcounter.com/11409447/0/8a88fc35/1/" alt="site
+			stats"></a></div></noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 	</body>
 </html>
